--- a/templates/views/productDetail.html
+++ b/templates/views/productDetail.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             {%include './mixin/category-list.html' %}
-
+            <h2 style="color:lightgreen">{{success}}</h2>
             <div class='col-md-10 col-sm-9 product-set-container-column'>
                 <!-- /wangting--这个地方判断产品如果是黑森林，就让超链接到活动界面 -->
                 <!-- <img alt="%e8%af%a6%e6%83%85%e5%9b%be %282%29" class="fly_img" src="{{product.images[0].url}}" /> -->
